modules/networking/vpc.tf
resource "aws_vpc" "ent_vpc" {
  cidr_block = var.cidr_block
  enable_dns_support = true
  enable_dns_hostnames = true
  tags ={
      Name = "ent-${terraform.workspace}-vpc"
      Environment = terraform.workspace
    }  
}
